syntax = "proto3";

import "util/tracing/proto/tracing.proto";

option go_package = "sigmaos/apps/hotel/proto";

service Geo {
  rpc Nearby(GeoReq) returns (GeoRep);
}

message GeoReq {
  float lat                           = 1;
  float lon                           = 2;
  SpanContextConfig spanContextConfig = 3;
}

message GeoRep {
  repeated string hotelIds = 1;
}
